# WeRead

./: package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yaml
src-tauri/: Cargo.toml
src-tauri/capabilities/: app.json
src-tauri/inject/: preload.js  style.css
src-tauri/src/: main.rs  tray.rs  wereader.rs
src/lib/: Setting.svelte
