[package]
name = "weread"
version = "0.0.0"
description = "WeRead"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = [
    "devtools",
    "image-ico",
    "image-png",
    "tray-icon",
    "unstable",
] }
tauri-plugin-shell = "2.0.0-rc"
tauri-plugin-window-state = "2.0.0-rc"
tauri-plugin-store = "2.0.0-rc"
serde_json = "1.0"
serde = { version = "1", features = ["derive"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
